Add build script for MacOS and Linux
Signed-off-by: Luiz Carlos Cavalcanti <cavalcanti.luiz@gmail.com>

--- a/.NET/Microsoft.Recognizers.Definitions/Microsoft.Recognizers.Definitions.csproj
+++ b/.NET/Microsoft.Recognizers.Definitions/Microsoft.Recognizers.Definitions.csproj
@@ -226,8 +226,11 @@
     <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
 
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="'$(Platform)'!='Unix'">
     <Exec Command="rem xcopy /E &quot;$(TargetDir)\..\*&quot; &quot;$(TargetDir)..\..\..\..\build\package\&quot; /Y" />
+  </Target>
+  <Target Name="PostBuildUnix" AfterTargets="PostBuildEvent" Condition="'$(Platform)'=='Unix'">
+    <Exec Command="#cp -r $(TargetDir)/../* $(TargetDir)../../../../../build/package\" />
   </Target>
 
 </Project>
