--- a/.NET/Microsoft.Recognizers.Definitions.Common/Microsoft.Recognizers.Definitions.Common.csproj
+++ b/.NET/Microsoft.Recognizers.Definitions.Common/Microsoft.Recognizers.Definitions.Common.csproj
@@ -7,8 +7,11 @@
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="'$(Platform)'!='Unix'">
     <Exec Command="rem xcopy /E &quot;$(TargetDir)\..\*&quot; &quot;$(TargetDir)..\..\..\..\build\package\&quot; /Y" />
+  </Target>
+  <Target Name="PostBuildUnix" AfterTargets="PostBuildEvent" Condition="'$(Platform)'=='Unix'">
+    <Exec Command="#cp -r $(TargetDir)/../* $(TargetDir)../../../../../build/package\" />
   </Target>
 
   <ItemGroup>
